fixed view bug for search on mobile devices

--- a/style.css
+++ b/style.css
@@ -52,13 +52,15 @@ header {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
     background-image: url('./assets/img/background/leaves.jpg');
     background-position: center;
     border-bottom: 1px solid rgba(192, 192, 192, 0.3);
     box-sizing: border-box;
     z-index: 1;
     width: 100%;
-    height: 35vh;
+    padding-top: 32px !important;
+    padding-bottom: 32px !important;
     gap: 32px;
 }
 
